--- a/ebike_analysis_book.ipynb
+++ b/ebike_analysis_book.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -14,85 +14,91 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>col_0</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Employment</th>\n",
        "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Family_Income</th>\n",
+       "      <th>Employment</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Travel_distance</th>\n",
+       "      <th>Commute</th>\n",
+       "      <th>Transportation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Employee</th>\n",
+       "      <th>count</th>\n",
+       "      <td>2234</td>\n",
+       "      <td>2221</td>\n",
+       "      <td>2227</td>\n",
+       "      <td>2220</td>\n",
+       "      <td>2178</td>\n",
+       "      <td>2223</td>\n",
+       "      <td>2237</td>\n",
+       "      <td>2237</td>\n",
+       "      <td>2237</td>\n",
+       "      <td>2238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>35 to 49</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Very good</td>\n",
+       "      <td>University</td>\n",
+       "      <td>$100K+</td>\n",
+       "      <td>Employee</td>\n",
+       "      <td>Toronto</td>\n",
+       "      <td>5 - 10 km</td>\n",
+       "      <td>16 - 29 minutes</td>\n",
+       "      <td>Bike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>863</td>\n",
+       "      <td>1554</td>\n",
+       "      <td>891</td>\n",
+       "      <td>903</td>\n",
+       "      <td>831</td>\n",
        "      <td>1410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>I don't understand the rationale for these demographic questions and I'm not sure the privacy statements meets CIMS requirements.</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Retired</th>\n",
-       "      <td>136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Self-employed</th>\n",
-       "      <td>362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Unemployed</th>\n",
-       "      <td>180</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Worker</th>\n",
-       "      <td>128</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>contract</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ltip disability</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>none of your business</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>occasional teacher</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>part time while I write</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>semi-retired, self-employed</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2145</td>\n",
+       "      <td>847</td>\n",
+       "      <td>782</td>\n",
+       "      <td>785</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "col_0                                               count\n",
-       "Employment                                               \n",
-       "Employee                                             1410\n",
-       "I don't understand the rationale for these demo...      1\n",
-       "Retired                                               136\n",
-       "Self-employed                                         362\n",
-       "Unemployed                                            180\n",
-       "Worker                                                128\n",
-       "contract                                                1\n",
-       "ltip disability                                         1\n",
-       "none of your business                                   1\n",
-       "occasional teacher                                      1\n",
-       "part time while I write                                 1\n",
-       "semi-retired, self-employed                             1"
+       "             Age Gender     Health   Education Family_Income Employment  \\\n",
+       "count       2234   2221       2227        2220          2178       2223   \n",
+       "unique         5      4          6           7             6          6   \n",
+       "top     35 to 49   Male  Very good  University        $100K+   Employee   \n",
+       "freq         863   1554        891         903           831       1410   \n",
+       "\n",
+       "        Address Travel_distance          Commute Transportation  \n",
+       "count      2237            2237             2237           2238  \n",
+       "unique        7               5                6              5  \n",
+       "top     Toronto       5 - 10 km  16 - 29 minutes           Bike  \n",
+       "freq       2145             847              782            785  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,58 +107,28 @@
     "import pandas as pd\n",
     "import numpy\n",
     "\n",
-    "df = pd.read_excel(\"/Users/jie/Documents/shopify/ebike/E-Bike_Survey_Responses.xls\")\n",
+    "df = pd.read_excel(\"/Users/jie/Documents/shopify/ebike/E-Bike_cleaned.xls\",index=False)\n",
+    "df_part1=df[['Date', 'Age','Gender','Health','Education','Family_Income','Employment',\n",
+    "              'Address','Travel_distance','Commute','Transportation','Response']]\n",
     "\n",
     "#########################################\n",
     "###########Data description##############\n",
-    "#rename the columns\n",
-    "df.columns = ['Date', 'Age','Sex','Health','Education','Family_Income','Employment',\n",
-    "              'Address','Travel_distance','Commute','Transportation','Vehicles',\n",
-    "              'Support_Statements','Multiuse_Trail','Trail_speed','Collision_witness',\n",
-    "              'Speed_limit','multiuselane_propelled','bicyclelane_use','bikelane_propelled',\n",
-    "              'Sidewalk','Personal_mobile']\n",
-    "\n",
-    "#clearify values in \"Health\" column:\n",
-    "df['Health']=df['Health'].replace(['In poor shape, but active & improving',\n",
-    "                                   'Obese, diabetic but trying to be healthy',\n",
-    "                                   'healthy but with arthritis mobilty issues'], 'Fairly poor')\n",
-    "\n",
-    "df['Health']=df['Health'].replace(['Back Injury','Disabled','healing fractured heel','need knee replacement'], 'Poor')\n",
-    "\n",
-    "\n",
-    "#clearify values in \"Education\" column:\n",
-    "df['Education']=df['Education'].replace(['Grade 8','working towards OSSD'], 'Secondary')\n",
-    "df['Education']=df['Education'].replace(['Grade 9','High school Student','High school diploma '], 'High school')\n",
-    "df['Education']=df['Education'].replace(['College or trade school diploma','college degree (not university and not a diploma)'\n",
-    "                                        ], 'College/Trade/technical/vocational training')\n",
-    "df['Education']=df['Education'].replace(['4 years university, no degree','Some University','Some university',\n",
-    "                                        'University Student','some uni','some university',\n",
-    "                                         'University','university','University degree'], 'University')\n",
-    "df['Education']=df['Education'].replace(['Graduate','Law School','M,D.','PhD'], 'Post graduate')\n",
-    "df['Education']=df['Education'].replace(['Professional degree','Professional Certifications'], 'Professional degree')\n",
-    "df['Education']=df['Education'].replace(['in HS','still in school'], 'Unknown')\n",
-    "\n",
-    "\n",
-    "#clearify values in \"Employment\" column:\n",
-    "df['Employment']=df['Employment'].replace(['Contract','Extreme full-time','FT Contract','Full Time','full time casual',\n",
-    "                                          'full time work and student'], 'Employee')\n",
-    "df['Employment']=df['Employment'].replace(['DISABLED ','DISSABLE','Disability pension',\n",
-    "                                          'Doctoral Student','Home Maker','ODSP','Student','disabled'], 'Unemployed')\n",
-    "df['Employment']=df['Employment'].replace(['',], 'Retired')\n",
-    "df['Employment']=df['Employment'].replace(['Free Lance','Free-lance and home maker','Freelance Artist',\n",
-    "                                          'Freelance Contractor','Part Time','Seasonal Full-Time','Student/internship',\n",
-    "                                          'arts worker - partial full time'], 'Worker')\n",
-    "\n",
-    "df['Employment']=df['Employment'].replace(['Full time job 3 days a week, own startup rest of time',\n",
-    "                                          'Self Employed','Self-employed '], 'Self-employed')\n",
-    "\n",
-    "# Employee.\n",
-    "# Worker.\n",
-    "# Self-employed.\n",
-    "\n",
-    "\n",
-    "my_tab = pd.crosstab(index=df['Employment'],columns=\"count\") \n",
-    "my_tab\n"
+    "df_part1.head()\n",
+    "df_part1.describe(include=['O'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is the distribution of categorical features?\n",
+    "* Each row is unique across the dataset (count=unique=2238).\n",
+    "* Age takes 5 ranges with 38.6% \"35 to 49 years old\" (top=35 to 49, freq= 863/count=2234).\n",
+    "* Gender variable has 4 possible values, with 70% male (top=male, freq=1554/count=2221).\n",
+    "* Health variable has 6 values, with 40% Very good (top=Very good, freq=891/count=2227).\n",
+    "* Yearly Household Income takes 6 possible values. 100K+ earned by most family (top=100K+)\n",
+    "* Employment has 6 status, most are employee (freq=1410/count=2178).\n",
+    "* Ticket feature has high ratio (22%) of duplicate values (unique=681)."
    ]
   },
   {
@@ -307,7 +283,7 @@
     "| :- |:---:| :-|\n",
     "| 1|Timestamp | Date|\n",
     "| 2|1. What age range do you fall in? | Age|\n",
-    "| 3|Sex | Sex|\n",
+    "| 3|Sex | Gender|\n",
     "| 4|How would you describe your level of physical health? | Health|\n",
     "| 5|What level of education have you reached? | Education|\n",
     "| 6|What is your household income? | Family_income|\n",
